allprojects {
    group = 'blue.heldplayer'
    version = System.getenv('RELEASE_VERSION')?.replaceFirst('^v', '') ?: '0.0.1-SNAPSHOT'

    repositories {
        mavenCentral()
    }
}

subprojects {
    plugins.withId('java') {
        java {
            sourceCompatibility = JavaVersion.VERSION_25
            targetCompatibility = JavaVersion.VERSION_25
        }
    }

    plugins.withId('maven-publish') {
        publishing {
            repositories {
                maven {
                    name = 'GitHubPackages'
                    url = "https://maven.pkg.github.com/heldplayer/pegen4j"
                    credentials {
                        username = System.getenv("GITHUB_ACTOR") ?: System.getenv("GITHUB_USERNAME")
                        password = System.getenv("GH_TOKEN")
                    }
                }
            }
        }
    }
}
